@@ -17,35 +17,35 @@ import static com.querydsl.core.alias.Alias.$;
 import static org.assertj.core.api.Assertions.assertThat;
 
 import com.querydsl.core.types.EntityPath;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
-public class CollectionTest {
+class CollectionTest {
 
   @Test
-  public void collectionUsage() {
+  void collectionUsage() {
     var domainType = Alias.alias(DomainType.class);
-    assertThat($(domainType.getCollection()).any().eq(domainType).toString())
-        .isEqualTo("any(domainType.collection) = domainType");
-    assertThat($(domainType.getSet()).any().eq(domainType).toString())
-        .isEqualTo("any(domainType.set) = domainType");
-    assertThat($(domainType.getList()).any().eq(domainType).toString())
-        .isEqualTo("any(domainType.list) = domainType");
-    assertThat($(domainType.getList().getFirst()).eq(domainType).toString())
-        .isEqualTo("domainType.list.getFirst() = domainType");
-    assertThat($(domainType.getList().get(3)).eq(domainType).toString())
-        .isEqualTo("domainType.list.get(3) = domainType");
-    assertThat($(domainType.getList()).get(0).eq(domainType).toString())
-        .isEqualTo("domainType.list.get(0) = domainType");
-    assertThat($(domainType.getMap()).get("key").eq(domainType).toString())
-        .isEqualTo("domainType.map.get(key) = domainType");
+    assertThat($(domainType.getCollection()).any().eq(domainType))
+        .hasToString("any(domainType.collection) = domainType");
+    assertThat($(domainType.getSet()).any().eq(domainType))
+        .hasToString("any(domainType.set) = domainType");
+    assertThat($(domainType.getList()).any().eq(domainType))
+        .hasToString("any(domainType.list) = domainType");
+    assertThat($(domainType.getList().getFirst()).eq(domainType))
+        .hasToString("domainType.list.getFirst() = domainType");
+    assertThat($(domainType.getList().get(3)).eq(domainType))
+        .hasToString("domainType.list.get(3) = domainType");
+    assertThat($(domainType.getList()).get(0).eq(domainType))
+        .hasToString("domainType.list.get(0) = domainType");
+    assertThat($(domainType.getMap()).get("key").eq(domainType))
+        .hasToString("domainType.map.get(key) = domainType");
 
     EntityPath<DomainType> domainTypePath = $(domainType);
-    assertThat($(domainType.getCollection()).contains(domainTypePath).toString())
-        .isEqualTo("domainType in domainType.collection");
+    assertThat($(domainType.getCollection()).contains(domainTypePath))
+        .hasToString("domainType in domainType.collection");
   }
 
   @Test
-  public void collectionUsage_types() {
+  void collectionUsage_types() {
     var domainType = Alias.alias(DomainType.class);
     assertThat($(domainType.getCollection()).any().getType()).isEqualTo(DomainType.class);
     assertThat($(domainType.getSet()).any().getType()).isEqualTo(DomainType.class);
